# check-buddy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust-toolchain.yml
check-buddy/: Cargo.toml  LICENSE.md
check-buddy-pgn-parser/: Cargo.toml  LICENSE.md
check-buddy-pgn-parser/src/: lib.rs
check-buddy/benches/: generate_moves.rs
check-buddy/src/: algorithm.rs  board.rs  game.rs  lib.rs
check-buddy/src/moves/: position_move.rs
check-buddy/src/piece/: piece_color.rs
check-buddy/tests/: best_move_validation.rs  fen_parser.rs  shannon_number.rs  uci_moves_validation.rs
check-buddy/tests/datasets/: best_move.xls
crates/check-buddy-algorithm/: Cargo.toml
crates/check-buddy-algorithm/examples/: alpha-beta-pruning.rs  tic-tac-toe.rs
crates/check-buddy-algorithm/src/: main.rs
crates/check-buddy-bevy/: Cargo.toml  README.md
crates/check-buddy-bevy/src/: board_options.rs  board_plugin.rs  events.rs  main.rs
crates/check-buddy-bevy/src/systems/: mod.rs  move_handling.rs  moves_display.rs  turn_handling.rs
crates/check-buddy-cli/: Cargo.toml
crates/check-buddy-cli/src/: main.rs
crates/check-buddy-core/: Cargo.toml  README.md
crates/check-buddy-core/benches/: generate_moves.rs
crates/check-buddy-core/src/: algorithm.rs  board.rs  errors.rs  game.rs  lib.rs
crates/check-buddy-core/src/moves/: mod.rs  uci_move.rs
crates/check-buddy-core/src/piece/: historical_move.rs  mod.rs  piece_move.rs  piece_type.rs  uci_move.rs
crates/check-buddy-core/tests/: best_move_validation.rs  fen_parser.rs  move_validation.rs  opening_moves_validation.rs  shannon_number.rs  shannon_table.rs  uci_moves_validation.rs
crates/check-buddy-gui/: Cargo.toml
crates/check-buddy-gui/src/: board.rs  board_plugin.rs  events.rs  lib.rs  main.rs
crates/check-buddy-gui/src/systems/: input_handling.rs  move_handling.rs  moves_display.rs
crates/check-buddy-macroquad/: Cargo.toml
crates/check-buddy-macroquad/src/: main.rs
crates/check-buddy-pgn-parser/: Cargo.toml
crates/check-buddy-pgn-parser/src/: lib.rs
crates/check-buddy-shell/: Cargo.toml  README.md
crates/check-buddy-shell/src/: main.rs
crates/check-buddy-tui/: Cargo.toml
crates/check-buddy-tui/src/: app.rs  main.rs  ui.rs
crates/check-buddy-wgpu/: Cargo.toml
crates/check-buddy-wgpu/src/: lib.rs
examples/: shell.rs
examples/check-buddy-gui/: Cargo.toml
examples/check-buddy-gui/src/: board.rs  lib.rs  states.rs
examples/check-buddy-shell/: Cargo.toml
examples/check-buddy-shell/src/: main.rs
examples/check-buddy-tui/: Cargo.toml
examples/check-buddy-tui/src/: app.rs  main.rs  ui.rs
examples/check-buddy-wgpu/: Cargo.toml
examples/check-buddy-wgpu/src/: main.rs
src/: board_plugin.rs  events.rs  lib.rs  main.rs
src/resources/: board.rs  board_options.rs  mod.rs  piece.rs  piece_type.rs
src/systems/: input_handling.rs  mod.rs  move_handling.rs  moves_display.rs
tests/: moves_integration.rs
