[package]
name = "check-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy","bevy-inspector-egui"]
debug = ["colored","clearscreen","clap"]

[dependencies]
clap = {version= "4.0.8",optional=true}
colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.13.0", optional = true }
clearscreen = {version="1.0",optional=true}

[dependencies.bevy]
version = "0.8.1"
optional = true
default-features = false
features = ["render","bevy_winit","png","wav"]

# WASM support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version= "0.8.1"
default-features = false
features = ["x11"]

[profile.dev.package."*"]
opt-level=3

[profile.dev]
opt-level=1

[profile.release]
lto = "thin"
opt-level = 'z'