[package]
name = "check-buddy"
description = "Check buddy is a chess engine"
license-file = "LICENSE.md"
version = "0.1.0"
edition = "2021"
authors = ["Ramon van Sprundel <ramonvansprundel@gmail.com>"]
categories = ["chess", "chess-engine", "gui"]

[workspace]
members = ["crates/*"]

[dependencies]
check-buddy-core = { path = "crates/check-buddy-core", version = "0.1" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 'z'
