[package]
name = "check-buddy-pgn-parser"
description = "The PGN parser for check buddy"
license-file = "LICENSE.md"
version = "0.2.3"
edition = "2021"
authors = ["Ramon van Sprundel <ramonvansprundel@gmail.com>"]
categories = ["chess", "chess-engine"]

[dependencies]
check-buddy = { path = "../check-buddy" }
anyhow = "1.0"
