[package]
name = "check-buddy-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check-buddy-core = { path = "../check-buddy-core" }
bevy = "0.8.1"

# WASM support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version= "0.8.1"
default-features = false
features = ["x11"]

[profile.dev.package."*"]
opt-level=3

[profile.dev]
opt-level=1

[profile.release]
lto = "thin"
opt-level = 'z'
