[package]
name = "check-buddy-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check-buddy-core = { path = "../check-buddy-core" }
bevy = { version = "0.9.1", features = ["wav"] }

# WASM support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.9.1"
default-features = false
features = ["x11"]
