[package]
name = "check-buddy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

[dev-dependencies]
criterion = "0.4"
calamine = "0.19"
thiserror = "1"

[[bench]]
name = "generate_moves"
harness = false

[profile.dev]
opt-level = 2

[profile.release]
lto = "thin"
opt-level = "s"
