[package]
name = "check-buddy-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check-buddy-core = { path = "../check-buddy-core" }
anyhow = "1"
clap = { version = "4.0.8" }
colored = { version = "2.0" }
clearscreen = { version = "1.0" }

[dev-dependencies]
thiserror = "1"